overflow fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@ body {
     position: relative;
     background-color: black !important;
     color: white !important;
+    overflow-x: hidden;
 }
 body > footer:nth-child(1) {
     bottom: 0;
